--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -7,3 +7,8 @@ homePageTitle=Walkthrough
 helloPanelTitle=Hello World
 
 openDialogButtonText=Click here
+invoiceListTitle=Invoice
+
+invoiceStatusA=New
+invoiceStatusB=In Progress
+invoiceStatusC=Done
